WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100260
Incorrect conditional use of LogFTP
https://bugs.webkit.org/show_bug.cgi?id=100260
Summary
Incorrect conditional use of LogFTP
Cosmin Truta
Reported
2012-10-24 08:53:27 PDT
As I fiddled with ASSERTIONS_DISABLED_DEFAULT, the build failed because of the use of LogFTP conditioned by the wrong #ifdef. A fix will follow.
Attachments
Patch
(1.19 KB, patch)
2012-10-24 09:07 PDT
,
Cosmin Truta
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cosmin Truta
Comment 1
2012-10-24 09:07:37 PDT
Created
attachment 170409
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-24 10:30:02 PDT
Comment on
attachment 170409
[details]
Patch Clearing flags on attachment: 170409 Committed
r132368
: <
http://trac.webkit.org/changeset/132368
>
WebKit Review Bot
Comment 3
2012-10-24 10:30:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug