Incorrect conditional use of LogFTP https://bugs.webkit.org/show_bug.cgi?id=100260

Patch by Cosmin Truta <ctruta@rim.com> on 2012-10-24
Reviewed by Alexey Proskuryakov.

Use LogFTP if !LOG_DISABLED, to allow toggling ASSERTIONS_DISABLED_DEFAULT
without breaking the build.

* html/FTPDirectoryDocument.cpp:
(WebCore::FTPDirectoryDocument::FTPDirectoryDocument):

git-svn-id: svn://svn.chromium.org/blink/trunk@132368 bbb929c8-8fbe-4397-9dbb-9b2b20218538